# langchain-callback-parquet-logger

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_tests.sh  test_v2.py
.github/workflows/: test.yml
examples/: analyze_logs.py  background_retrieval.py  basic_usage.py  batch_process_example.py  batch_processing.py  batch_run_example.py  memory_efficient_batch.py  minimal.py  partitioning_example.py  retrieve_background_responses.py  simple_batch_example.py
langchain_callback_parquet_logger/: __init__.py  background_retrieval.py  batch.py  batch_helpers.py  config.py  logger.py  storage.py  tagging.py
tests/: conftest.py  test_background_retrieval.py  test_batch.py  test_batch_process.py  test_config.py  test_core.py  test_enhanced_logging.py  test_pydantic_serialization.py  test_raw_capture.py  test_s3_integration.py  test_usage_metadata.py
