[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-callback-parquet-logger"
version = "0.1.5"
description = "A Parquet-based callback handler for logging LangChain LLM interactions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "turbo3136", email = "turbo3136@gmail.com"},
]
keywords = ["langchain", "logging", "parquet", "llm", "callback", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

dependencies = [
    "pyarrow>=10.0.0",
    "langchain-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/turbo3136/langchain-callback-parquet-logger"
Repository = "https://github.com/turbo3136/langchain-callback-parquet-logger"
Issues = "https://github.com/turbo3136/langchain-callback-parquet-logger/issues"

[tool.setuptools.packages.find]
include = ["langchain_callback_parquet_logger*"]