[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-callback-parquet-logger"
version = "3.0.1"
description = "A Parquet-based callback handler for logging LangChain LLM interactions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "turbo3136", email = "turbo3136@gmail.com"},
]
keywords = ["langchain", "logging", "parquet", "llm", "callback", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

dependencies = [
    "pyarrow>=10.0.0",
    "langchain-core>=1.0.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pandas>=1.3.0",
]
background = [
    "openai>=1.0.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
]
s3 = [
    "boto3>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/turbo3136/langchain-callback-parquet-logger"
Repository = "https://github.com/turbo3136/langchain-callback-parquet-logger"
Issues = "https://github.com/turbo3136/langchain-callback-parquet-logger/issues"

[tool.setuptools.packages.find]
include = ["langchain_callback_parquet_logger*"]
